--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Env-Sanctify-1.04.tar.gz: 42fb86139d2f28d17b130c2b636e46d8e0919113
-sources:
   Env-Sanctify-1.06.tar.gz: 587de7430a446fb228a0b3d38d0bdf1887e0ba9c
+sources:
+  Env-Sanctify-1.12.tar.gz: 5dc5c916b72577f8fb3a628daf709dff42e0d5d3
